b=184120 Add non-BMP char. support to UTF-32 converters. r=smontague, sr=dbaron, a=asa